--- a/lsb_public_html/index.html
+++ b/lsb_public_html/index.html
@@ -3,20 +3,24 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
 <title>Welcome to the Buildbot</title>
+<link href="buildbot.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 <h1>Welcome to the Buildbot!</h1>
 
 <ul>
-  <li>the <a href="grid">Grid Display</a> will give you a
-  developer-oriented summary of recent buildbot activity.</li>
-
-  <li>the <a href="tgrid">Transposed Grid Display</a> presents
-  the same information as the grid, but lists the revisions down the side.</li>
-
-  <li>the <a href="waterfall">Waterfall Display</a> will give you a
+  <li>the Waterfall Display will give you a
   time-oriented summary of recent buildbot activity.</li>
+
+  <ul>
+    <li><a href="waterfall">Complete view</a></li>
+    <li><a href="waterfall?failures_only=true">Current failures only</a></li>
+    <li><a href="waterfall/help">Help on other waterfall views</a></li>
+  </ul>
+
+  <li>the <a href="console">Console Display</a> will give you a
+  developer-oriented summary of recent buildbot activity.</li>
 
   <li>The <a href="one_box_per_builder">Latest Build</a> for each builder is
   here.</li>
